# unseen-formats

./: .gitignore  README.md  pyproject.toml
data/: extensions-2025-08-12.json  extensions-2025-08-12.species.csv  extensions-new-2025-08-12.json  extensions-new-2025-08-12.species.csv
notebooks/: Format_Registry_Comparison.ipynb  UnseenFormats.md
src/: Format_Registry_Comparison.ipynb  UnseenFormats.md
src/data/: 2025-09-28-registries.jsonl  2025-09-28-registries.species.csv  extensions-2025-08-12.json  extensions-2025-08-12.species.csv  extensions-new-2025-08-12.json  extensions-new-2025-08-12.species.csv
unseen_formats/: fit.py  species.py  species_curve.py
