[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unseen-formats"
version = "2025.0.0"
dependencies = [
  "jupyterlab",
  "jupyterlab_myst",
  "jupytext",
  "manim",
  "matplotlib",
  "matplotlib-venn",
  "mystmd",
  "upsetplot"
]
requires-python = ">=3.11"
